# onconova

./: .env.sample  .gitignore  CHANGELOG.md
docs/: pyproject.toml
docs/src/: SUMMARY.md  index.md
docs/src/get-started/: installation.md
docs/src/guide/: about.md
docs/src/guide/api/: fhir.md  overview.md
docs/src/guide/security/: authentication.md
docs/src/reference/: client-docs.md
server/: Dockerfile  pyproject.toml
server/onconova/: api.py  settings.py  urls.py
server/onconova/core/: schemas.py
server/onconova/core/auth/: controllers.py  schemas.py
server/onconova/core/history/: middleware.py
server/onconova/core/serialization/: base.py
server/onconova/interoperability/: parsers.py  schemas.py
server/onconova/interoperability/fhir/: _generate_models.py  api.py  utils.py
server/onconova/interoperability/fhir/controllers/: __init__.py  adverse_event.py  base.py  condition.py  episode_of_care.py  family_member_history.py  medication_administration.py  metadata.py  observation.py  patient.py  procedure.py
server/onconova/interoperability/fhir/models/: AdverseEvent.py  AneuploidScore.py  CancerFamilyMemberHistory.py  CancerPatient.py  CancerRiskAssessment.py  CancerStage.py  Comorbidities.py  ECOGPerformanceStatus.py  GenomicVariant.py  GenomicsBase.py  HomologousRecombinationDeficiency.py  ImagingDiseaseStatus.py  KarnofskyPerformanceStatus.py  Lifestyle.py  LossOfHeterozygosity.py  LymphomaStage.py  MedicationAdministration.py  MicrosatelliteInstability.py  MolecularTumorBoardReview.py  PrimaryCancerCondition.py  RadiotherapyCourseSummary.py  SecondaryCancerCondition.py  SurgicalProcedure.py  TNMCategory.py  TNMDistantMetastasesCategory.py  TNMGradeCategory.py  TNMLymphaticInvasionCategory.py  TNMPerineuralInvasionCategory.py  TNMPrimaryTumorCategory.py  TNMRegionalNodesCategory.py  TNMResidualTumorCategory.py  TNMSerumTumorMarkerLevelCategory.py  (+11 more)
server/onconova/oncology/: similarity_count.py
server/onconova/oncology/controllers/: genomic_signature.py  patient_case.py  staging.py  tumor_board.py
server/onconova/oncology/migrations/: 0002_remove_genomicvariant_create_insert_and_more.py  0003_remove_tnmstaging_create_insert_and_more.py  0004_remove_familyhistory_create_insert_and_more.py
server/onconova/oncology/models/: adverse_event.py  family_history.py  genomic_variant.py  patient_case.py  radiotherapy.py  staging.py  surgery.py  systemic_therapy.py  therapy_line.py  treatment_response.py  tumor_board.py  tumor_marker.py
server/onconova/oncology/schemas/: __init__.py  adverse_event.py  family_history.py  genomic_signature.py  genomic_variant.py  patient_case.py  performance_status.py  radiotherapy.py  staging.py  surgery.py  systemic_therapy.py  treatment_response.py  tumor_board.py  vitals.py
server/onconova/research/models/: project.py
server/onconova/research/schemas/: project.py
server/onconova/terminology/: digestors.py  models.py  special.py
server/onconova/terminology/definitions/: simplifier.net.onconova.ValueSets.onconova-cancer-risk-assessment-values.json  simplifier.net.onconova.ValueSets.onconova-surgical-procedures.json  simplifier.net.onconova.ValueSets.onconova-tumor-marker-analytes.json
server/onconova/terminology/external-sources/: icdo3morph.tsv
server/onconova/terminology/migrations/: 0002_alter_adjunctivetherapyrole_code_and_more.py
server/onconova/tests/: common.py  factories.py  settings.py
server/onconova/tests/interoperability/: test_fhir_controllers.py  test_fhir_schemas.py  test_interoperability_import.py
server/onconova/tests/oncology/: test_oncology_controllers.py  test_oncology_models.py  test_similarity_count.py
server/onconova/tests/research/: test_research_analysis.py
(+105 files in other folders)
