[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onconova-docs"
version = "1.4.0"
description = "Documentation for Onconova"
license = "MIT"
authors = [
    {name = 'Luis Fábregas-Ibáñez', email = 'luisfabib@gmail.com'},
]
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Healthcare Industry',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: MIT License',
    'Operating System :: Unix',
    'Operating System :: POSIX :: Linux',
    'Environment :: Console',
    'Environment :: MacOS X',
]
requires-python = '>=3.10'
dependencies = [
    'mkdocs-material==9.6.14',
    'neoteroi-mkdocs==1.1.2',
    'mkdocstrings==0.30.0',
    'mkdocstrings-python==1.18.2',
    'mkdocs-literate-nav==0.6.1',
    'mkdocs-gen-files==0.5.0',
    'mkdocs-document-dates==3.1.3',
    'toml==0.10.2',
    'mike==2.1.3',
]

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src"]



